<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetFiltersActivity" >

    <TextView
        android:id="@+id/tvFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_settings"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/llImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvFilterTitle" >

        <TextView
            android:id="@+id/tvImageSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_size_string" />

        <Spinner
            android:id="@+id/spImageSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/image_size_array" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llImageSize"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colors_string" />

        <Spinner
            android:id="@+id/spColors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/colors_array" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llImageType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llColors" >

        <TextView
            android:id="@+id/tvImageType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_type_string" />

        <Spinner
            android:id="@+id/spImageType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/image_type_array" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llSiteFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llImageType" >

        <TextView
            android:id="@+id/tvSiteFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/site_filter_string" />

        <EditText
            android:id="@+id/etSiteFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/site_hint" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llSearchFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llSiteFilter" >

        <TextView
            android:id="@+id/tvSearchFor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_for_string" />

        <EditText
            android:id="@+id/etSearchFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llSearchFor"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonSave"
        android:text="@string/button_save" />

</RelativeLayout>